! fix category expand collapse

--- a/css/index.css
+++ b/css/index.css
@@ -694,7 +694,7 @@ h2.category_header.expand {
 
 /* Expand/Collapse image in the various headers */
 .collapse, .expand {
-	float: right;
+	margin: 1em 0;
 }
 
 h2 a.collapse {
